--- a/data/web/style.css
+++ b/data/web/style.css
@@ -1,108 +1,106 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
 
 body {
-  font-size: 15px;
-  line-height: 1.5;
-  background: #fafafa;
-  font-family: 'Helvetica Neue', Helvetica, Arial, serif;
-  font-weight: 400;
-  color: #666;
+    font-size: 15px;
+    line-height: 1.5;
+    background: #fafafa;
+    font-family: 'Helvetica Neue', Helvetica, Arial, serif;
+    font-weight: 400;
+    color: #666;
+    height: 100%;
+    margin-bottom: 16px
 }
 
 a {
-  color: #2879d0;
+    color: #2879d0;
 }
 a:hover {
-  color: #2268b2;
+    color: #2268b2;
 }
 
 header {
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 20px;
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  background: #2e7bcf;
-  border-bottom: solid 1px #275da1;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+    background: #2e7bcf;
+    border-bottom: solid 1px #275da1;
 }
 
 header h1 {
-  letter-spacing: -1px;
-  font-size: 72px;
-  color: #fff;
-  line-height: 1;
-  margin-bottom: 0.2em;
-  font-weight: normal;
+    letter-spacing: -1px;
+    font-size: 72px;
+    color: #fff;
+    line-height: 1;
+    margin-bottom: 0.2em;
+    font-weight: normal;
 }
 
 header h2 {
-  font-size: 26px;
-  color: #9ddcff;
-  font-weight: normal;
-  line-height: 1.3;
-  letter-spacing: 0;
+    font-size: 26px;
+    color: #9ddcff;
+    font-weight: normal;
+    line-height: 1.3;
+    letter-spacing: 0;
 }
 
 #main {
-  padding: 10px;
+    padding: 10px;
 }
 
 #main h1 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 2.8em;
-  letter-spacing: -1px;
-  color: #474747;
+    font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+    font-size: 2.8em;
+    letter-spacing: -1px;
+    color: #474747;
+    min-height: 100%;
+    margin-bottom: 8px
 }
 
 #main h1:before {
-  content: "/";
-  color: #9ddcff;
-  padding-right: 0.3em;
+    content: "/";
+    color: #9ddcff;
+    padding-right: 0.3em;
 }
 
 #main h2 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 22px;
-  font-weight: bold;
-  margin-bottom: 8px;
-  color: #474747;
+    font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 8px;
+    color: #474747;
 }
 #main h2:before {
-  content: "//";
-  color: #9ddcff;
-  padding-right: 0.3em;
+    content: "//";
+    color: #9ddcff;
+    padding-right: 0.3em;
 }
 
 #main h3 {
-  font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
-  font-size: 18px;
-  font-weight: bold;
-  margin-bottom: 8px;
-  color: #474747;
+    font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 8px;
+    color: #474747;
 }
 
 #main h3:before {
-  content: "///";
-  color: #9ddcff;
-  padding-right: 0.3em;
-  margin-left: -2em;
-}
-
-.inner {
-  position: relative;
-  width: 940px;
-  margin: 0 auto;
-}
-
-.right {
-  text-align: right;
+    content: "///";
+    color: #9ddcff;
+    padding-right: 0.3em;
+    margin-left: -2em;
 }
 
 .center {
-  text-align: center;
+    text-align: center;
 }
 
-#rfc{
-    float:left;
-    width:40%;
+#rfc {
+    float: left;
+    width: 40%;
 }
 
 .rfc-chapter {
@@ -110,6 +108,22 @@ header h2 {
     font-size: 9px;
 }
 
-#diagram{
-    margin-left: 40%;
+#details {
+    float: left;
+}
+
+#diagram {
+    float: left;
+    width: 30%;
+}
+
+.site-footer {
+    border-top-style: dashed;
+    border-top-width: 1px;
+    font-size: 9px;
+    height: 16px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
 }
