--- a/data/web/style.css
+++ b/data/web/style.css
@@ -71,7 +71,7 @@ input { margin-top: 1em; font: inherit; vertical-align:bottom; }
 strong { font-weight:bold }
 em { font-style: italic }
 
-#diagram svg text { font-size:0.75em !important; cursor:pointer; }
+#diagram svg text { font-size:0.75em !important; }
 
 /* Mobile adjustements */
 @media only screen and (max-width: 540px)
