--- a/data/web/style.css
+++ b/data/web/style.css
@@ -58,7 +58,7 @@ p, pre { margin-top: 1.3125em; }
 
 pre { font-family:monospace; font-size:0.75em; line-height:1.75em; }
 
-#details-div pre {
+#rfc, #details-div pre {
   white-space: pre-wrap;       /* css-3 */
   white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
   white-space: -pre-wrap;      /* Opera 4-6 */
